[package]
name = "server"
version = "0.1.0"
authors = ["Михайло Перекопський <perekopskiy@dlit.dp.ua>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
anyhow = "1.0"
sqlx = { version = "0.4.0-beta.1", features = [  "runtime-actix-rustls", "postgres"] }